Fixed another issue regarding the article-container overflow

--- a/src/css/framework/utility.scss
+++ b/src/css/framework/utility.scss
@@ -8,6 +8,9 @@
 %fadable-active { @include fadable-active; }
 .responsive { @include responsive; }
 
+/* Quick overflow: hidden */
+.no-overflow { overflow: hidden; }
+
 /* Easy link's style */
 .link,
 %link {
