--- a/src/css/pages/article.scss
+++ b/src/css/pages/article.scss
@@ -321,8 +321,6 @@ article .share { margin: 0; }
 			height: 2em;
 		}
 
-.article-container { overflow: hidden; }
-
 // Consider every child of .article-container as a column
 .article-container > * { @extend .col; }
 
